Remove some images

--- a/shipper/src/main/resources/templates/index.html
+++ b/shipper/src/main/resources/templates/index.html
@@ -84,7 +84,7 @@
 							<div class="stats-item text-center w-100 h-100">
 								<span data-purecounter-start="0" data-purecounter-end="521"
 									data-purecounter-duration="1" class="purecounter"></span>
-								<p>Foods</p>
+								<p>Orders</p>
 							</div>
 						</div><!-- End Stats Item -->
 
