--- a/shipper/src/main/resources/templates/fragment/not-busy-orders.html
+++ b/shipper/src/main/resources/templates/fragment/not-busy-orders.html
@@ -18,11 +18,11 @@
         </thead>
         <tbody>
             <tr th:each="order: ${orders}">
-                <td th:utext="${order.id}">1</td>
+                <td class="order-id" th:utext="${order.id}">1</td>
                 <td th:utext="${order.createdDate}">2023-03-12</td>
                 <td th:utext="${order.address}">123 Main St</td>
-                <td><button class="btn btn-primary">Detail</button></td>
-                <td><button class="btn btn-success">Choose</button></td>
+                <td><button class="btn btn-primary" onclick="detail(this)">Detail</button></td>
+                <td><button class="btn btn-success" onclick="choose(this)">Choose</button></td>
             </tr>
         </tbody>
     </table>
