Create login page

--- a/shipper/src/main/resources/templates/index.html
+++ b/shipper/src/main/resources/templates/index.html
@@ -36,25 +36,7 @@
 <body>
 
 	<!-- ======= Header ======= -->
-	<header id="header" class="header d-flex align-items-center fixed-top">
-		<div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-
-			<a href="index.html" class="logo d-flex align-items-center">
-				<h1>eShipper</h1>
-			</a>
-
-			<i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-			<i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-			<nav id="navbar" class="navbar">
-				<ul>
-					<li><a href="#hero" class="active">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a class="get-a-quote" href="get-a-quote.html">Login</a></li>
-				</ul>
-			</nav><!-- .navbar -->
-
-		</div>
-	</header><!-- End Header -->
+	<header th:replace="fragment/header-index :: header-index"></header>
 	<!-- End Header -->
 
 	<!-- ======= Hero Section ======= -->
