--- a/shipper/src/main/resources/templates/login.html
+++ b/shipper/src/main/resources/templates/login.html
@@ -110,7 +110,6 @@
 	<script th:src="@{/assets/vendor/glightbox/js/glightbox.min.js}"></script>
 	<script th:src="@{/assets/vendor/swiper/swiper-bundle.min.js}"></script>
 	<script th:src="@{/assets/vendor/aos/aos.js}"></script>
-	<!--<script th:src="@{/assets/vendor/php-email-form/validate.js}"></script>-->
 
 	<!-- Template Main JS File -->
 	<script th:src="@{/assets/js/main.js}"></script>
@@ -118,12 +117,11 @@
 	<!-- Ajax -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 	<script>
+
+		// This submit form just to simulate passing the value from the form to server 
 		$('#submit-form').on('submit', function (e) {
 			e.preventDefault(); // Prevent the form from submitting in the traditional way
-			//let username = $("#username").val();
-			//let password = $("#password").val();
-
-			let formData = $(this).serialize();
+			let formData = $(this).serialize(); // Serialize the form data
 
 			$.ajax({
 				url: 'http://localhost:8080/shipper/login',
@@ -137,53 +135,8 @@
 				}
 			});
 
-
-			/*var formData = $(this).serialize(); // Serialize the form data
-			$.ajax({
-				type: 'POST',
-				url: 'process-form.php', // URL where the form data should be submitted
-				data: formData,
-				success: function(response) {
-					alert('Form submitted successfully!'); // Show a success message
-				},
-				error: function(xhr, status, error) {
-					alert('Error submitting form: ' + error); // Show an error message
-				}
-			});*/
 		});
 
-
-
-		/*function render() {
-			$.ajax({
-				url: "http://localhost:8080/order/not-busy",
-				type: 'GET',
-				contentType: "html",
-				crossDomain: true,
-				success: function (data) {
-					$("#not-busy-order").html(data);
-				}
-			});
-		}*/
-
-		/*function choose(that) {
-			let orderId = $(that).closest("tr").find(".order-id").text();
-			$.ajax({
-				url: 'http://localhost:8080/api/order/shipper',
-				method: 'PUT',
-				data: {
-					shipperId: shipperId,
-					orderId: orderId
-				},
-				success: function(response) {
-					//console.log('Request succeeded:', response);
-					render();
-				},
-				error: function(xhr, status, error) {
-					console.log('Request failed:', error);
-				}
-			});
-		}*/
 	</script>
 
 </body>
