--- a/shipper/src/main/resources/templates/profile.html
+++ b/shipper/src/main/resources/templates/profile.html
@@ -57,56 +57,15 @@
 				<div class="container">
 					<ol>
 						<li><a href="index.html">Home</a></li>
-						<li>Get a Quote</li>
+						<li>Profile</li>
 					</ol>
 				</div>
 			</nav>
 		</div><!-- End Breadcrumbs -->
 
 		<!-- ======= Get a Quote Section ======= -->
-		<section id="get-a-quote" class="get-a-quote">
-			<div class="container" data-aos="fade-up">
-
-				<div class="">
-					<div style="width:60%">
-						<form action="forms/quote.php" method="post" class="php-email-form">
-							<h3>Your Information</h3>
-							<div class="row gy-4">
-
-								<div class="col-md-12">
-									<input type="text" name="name" class="form-control" placeholder="Name" required>
-								</div>
-
-								<div class="col-md-12 ">
-									<input type="email" class="form-control" name="email" placeholder="Email" required>
-								</div>
-
-								<div class="col-md-12">
-									<input type="text" class="form-control" name="phone" placeholder="Phone" required>
-								</div>
-
-								<div class="col-md-12 text-center">
-									<div class="loading">Loading</div>
-									<div class="error-message"></div>
-									<div class="sent-message">Your quote request has been sent successfully. Thank you!
-									</div>
-
-									<div>
-										<button type="submit" class="me-5">Save</button>
-										<a class="get-a-quote text-secondary" href="get-a-quote.html">Cancel</a>
-									</div>
-
-
-								</div>
-
-							</div>
-						</form>
-					</div><!-- End Quote Form -->
-
-				</div>
-
-			</div>
-		</section><!-- End Get a Quote Section -->
+		<div id="profile-box"></div>
+		<!-- End Get a Quote Section -->
 
 	</main><!-- End #main -->
 
@@ -125,10 +84,30 @@
 	<script th:src="@{/assets/vendor/glightbox/js/glightbox.min.js}"></script>
 	<script th:src="@{/assets/vendor/swiper/swiper-bundle.min.js}"></script>
 	<script th:src="@{/assets/vendor/aos/aos.js}"></script>
-	<script th:src="@{/assets/vendor/php-email-form/validate.js}"></script>
+	<!--<script th:src="@{/assets/vendor/php-email-form/validate.js}"></script>-->
 
 	<!-- Template Main JS File -->
 	<script th:src="@{/assets/js/main.js}"></script>
+
+	<!-- Ajax -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+	<script>
+
+		render();	// Show all content at the first load
+
+		function render() {
+			$.ajax({
+				url: "http://localhost:8080/shipper/profile/profile-box",
+				type: 'GET',
+				contentType: "html",
+				crossDomain: true,
+				success: function (data) {
+					$("#profile-box").html(data);
+				}
+			});
+		}
+
+	</script>
 
 </body>
 
