--- a/shipper/src/main/resources/templates/fragment/profile-box.html
+++ b/shipper/src/main/resources/templates/fragment/profile-box.html
@@ -8,36 +8,40 @@
 <body>
     <section class="get-a-quote" th:fragment="profile-box">
         <div class="container" data-aos="fade-up">
-
             <div class="">
                 <div style="width:60%">
-                    <form id="submit-form" class="php-email-form">
+                    <form id="submit-form" class="php-email-form" th:attr="onsubmit=${'submitForm(); return false;'}">
                         <h3 class="mb-3">Your Information</h3>
                         <div class="row gy-4">
 
                             <div class="col-md-12">
                                 <label class="mb-2">User ID:</label>
-                                <input type="text" name="id" th:value="${user.id}" class="form-control" placeholder="User ID" disabled>
+                                <input type="text" name="id" th:value="${user.id}" class="form-control"
+                                    placeholder="User ID" disabled>
                             </div>
 
                             <div class="col-md-12">
                                 <label class="mb-2">Username:</label>
-                                <input type="text" name="username" th:value="${user.username}" class="form-control" placeholder="Username" disabled>
+                                <input type="text" name="username" th:value="${user.username}" class="form-control"
+                                    placeholder="Username" disabled>
                             </div>
 
                             <div class="col-md-12">
                                 <label class="mb-2">Password:</label>
-                                <input type="password" name="password" th:value="${user.password}" class="form-control" placeholder="Password" required>
+                                <input type="password" name="password" th:value="${user.password}" class="form-control"
+                                    placeholder="Password" required>
                             </div>
 
                             <div class="col-md-12">
-                                <label class="mb-2">Fullname:</label>
-                                <input type="text" name="fullname" th:value="${user.fullname}" class="form-control" placeholder="Full Name" required>
+                                <label class="mb-2">Full Name:</label>
+                                <input type="text" name="fullname" th:value="${user.fullname}" class="form-control"
+                                    placeholder="Full Name" required>
                             </div>
 
                             <div class="col-md-12">
                                 <label class="mb-2">Phone Number:</label>
-                                <input type="text" name="phone" th:value="${user.phone}" class="form-control" placeholder="Phone" required>
+                                <input type="text" name="phone" th:value="${user.phone}" class="form-control"
+                                    placeholder="Phone" required>
                             </div>
 
                             <div class="col-md-12 text-center">
@@ -53,6 +57,7 @@
                 </div><!-- End Quote Form -->
 
             </div>
+            
 
         </div>
     </section><!-- End Get a Quote Section -->
