--- a/food/src/main/resources/templates/fragment/header.html
+++ b/food/src/main/resources/templates/fragment/header.html
@@ -11,7 +11,7 @@
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
             <a href="index.html" class="logo d-flex align-items-center">
-                <h1>eShipper</h1>
+                <h1>eFoodShop</h1>
             </a>
 
             <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -19,8 +19,6 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a href="#hero" class="active">Home</a></li>
-                    <li><a href="#">In-Progress Orders</a></li>
-                    <li><a href="#">Delivered Orders</a></li>
                     <li><a href="#">Profile</a></li>
                     <li><a class="get-a-quote" style="background-color: #ff2c2c;" href="get-a-quote.html">Logout</a>
                     </li>
