modify Home url

--- a/food/src/main/resources/templates/fragment/header.html
+++ b/food/src/main/resources/templates/fragment/header.html
@@ -18,7 +18,7 @@
             <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="#hero" class="active">Home</a></li>
+                    <li><a href="../food/view-food" class="active">Home</a></li>
                     <li><a href="#">Profile</a></li>
                     <li><a class="get-a-quote" style="background-color: #ff2c2c;" href="get-a-quote.html">Logout</a>
                     </li>
