--- a/food/src/main/resources/templates/view-food-detail.html
+++ b/food/src/main/resources/templates/view-food-detail.html
@@ -65,7 +65,7 @@
 				<div class="container">
 					<ol>
 						<li><a href="../food/view-food">Home</a></li>
-						<li>Create Food</li>
+						<li>Food Detail</li>
 					</ol>
 				</div>
 			</nav>
