--- a/shipper/src/main/resources/templates/home.html
+++ b/shipper/src/main/resources/templates/home.html
@@ -66,8 +66,26 @@
 		<section class="sample-page">
 			<div class="container" data-aos="fade-up">
 				<h1 class="mb-5">Not-busy Orders</h1>
+				<!-- Search bar -->
+				<div class="input-group mb-3 w-25">
+					<input type="text" class="form-control" placeholder="Order ID...">
+					<div class="input-group-append">
+						<button class="btn btn-outline-primary" type="button">Search</button>
+					</div>
+				</div>
+
+				<!-- Table content -->
 				<div id="not-busy-order"></div>
 				<!--<table th:replace="fragment/not-busy-orders :: not-busy-orders"></table>-->
+
+				<!-- Pagination -->
+				<nav aria-label="Page navigation example" class="d-flex justify-content-center mt-4">
+					<ul class="pagination">
+						<li class="page-item"><a class="page-link active" href="#">1</a></li>
+						<li class="page-item"><a class="page-link" href="#">2</a></li>
+						<li class="page-item"><a class="page-link" href="#">3</a></li>
+					</ul>
+				</nav>
 			</div>
 		</section>
 
@@ -96,10 +114,9 @@
 	<!-- Ajax -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 	<script>
-
 		let shipperId = 1; // Test for shipper id before authentication and authorization handling by security
 
-		render();	// Show all content at the first load
+		render(); // Show all content at the first load
 
 
 		function render() {
@@ -123,11 +140,11 @@
 					shipperId: shipperId,
 					orderId: orderId
 				},
-				success: function(response) {
+				success: function (response) {
 					//console.log('Request succeeded:', response);
 					render();
 				},
-				error: function(xhr, status, error) {
+				error: function (xhr, status, error) {
 					console.log('Request failed:', error);
 				}
 			});
