--- a/shipper/src/main/resources/templates/login.html
+++ b/shipper/src/main/resources/templates/login.html
@@ -71,8 +71,8 @@
 						<div class="row gy-4 mt-2">
 
 							<div class="col-md-12 ">
-								<input type="text" class="form-control" id="username" name="username"
-									placeholder="Username" required>
+								<input type="email" class="form-control" id="email" name="email"
+									placeholder="Email" required>
 							</div>
 
 							<div class="col-md-12">
