--- a/food/src/main/resources/templates/view-all-food.html
+++ b/food/src/main/resources/templates/view-all-food.html
@@ -10,8 +10,8 @@
 	<meta content="" name="keywords">
 
 	<!-- Favicons -->
-	<link th:href="@{/assets/img/favicon.png}" rel="icon">
-	<link th:href="@{/assets/img/apple-touch-icon.png}" rel="apple-touch-icon">
+	<link th:href="@{|${@environment.getProperty('gateway.path')}/assets/img/favicon.png|}" rel="icon">
+	<link th:href="@{|${@environment.getProperty('gateway.path')}/assets/img/apple-touch-icon.png|}" rel="apple-touch-icon">
 
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,15 +21,15 @@
 		rel="stylesheet">
 
 	<!-- Vendor CSS Files -->
-	<link th:href="@{/assets/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
-	<link th:href="@{/assets/vendor/bootstrap-icons/bootstrap-icons.css}" rel="stylesheet">
-	<link th:href="@{/assets/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet">
-	<link th:href="@{/assets/vendor/glightbox/css/glightbox.min.css}" rel="stylesheet">
-	<link th:href="@{/assets/vendor/swiper/swiper-bundle.min.css}" rel="stylesheet">
-	<link th:href="@{/assets/vendor/aos/aos.css}" rel="stylesheet">
+	<link th:href="@{|${@environment.getProperty('gateway.path')}/assets/vendor/bootstrap/css/bootstrap.min.css|}" rel="stylesheet">
+	<link th:href="@{|${@environment.getProperty('gateway.path')}/assets/vendor/bootstrap-icons/bootstrap-icons.css|}" rel="stylesheet">
+	<link th:href="@{|${@environment.getProperty('gateway.path')}/assets/vendor/fontawesome-free/css/all.min.css|}" rel="stylesheet">
+	<link th:href="@{|${@environment.getProperty('gateway.path')}/assets/vendor/glightbox/css/glightbox.min.css|}" rel="stylesheet">
+	<link th:href="@{|${@environment.getProperty('gateway.path')}/assets/vendor/swiper/swiper-bundle.min.css|}" rel="stylesheet">
+	<link th:href="@{|${@environment.getProperty('gateway.path')}/assets/vendor/aos/aos.css|}" rel="stylesheet}">
 
 	<!-- Template Main CSS File -->
-	<link th:href="@{/assets/css/main.css}" rel="stylesheet">
+	<link th:href="@{|${@environment.getProperty('gateway.path')}/assets/css/main.css|}" rel="stylesheet">
 
 	<!-- Bootstrap import -->
 	<!-- Latest compiled and minified CSS -->
@@ -52,7 +52,7 @@
 		<!-- ======= Breadcrumbs ======= -->
 		<div class="breadcrumbs">
 			<div class="page-header d-flex align-items-center"
-				style="background-image: url('../assets/img/page-header.jpg');">
+				th:style="|background-image: url('${@environment.getProperty('gateway.path')}/assets/img/page-header.jpg');|">
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-6 text-center">
@@ -139,15 +139,15 @@
 	<div id="preloader"></div>
 
 	<!-- Vendor JS Files -->
-	<script th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-	<script th:src="@{/assets/vendor/purecounter/purecounter_vanilla.js}"></script>
-	<script th:src="@{/assets/vendor/glightbox/js/glightbox.min.js}"></script>
-	<script th:src="@{/assets/vendor/swiper/swiper-bundle.min.js}"></script>
-	<script th:src="@{/assets/vendor/aos/aos.js}"></script>
-	<script th:src="@{/assets/vendor/php-email-form/validate.js}"></script>
+	<script th:src="@{|${@environment.getProperty('gateway.path')}/assets/vendor/bootstrap/js/bootstrap.bundle.min.js|}"></script>
+	<script th:src="@{|${@environment.getProperty('gateway.path')}/assets/vendor/purecounter/purecounter_vanilla.js|}"></script>
+	<script th:src="@{|${@environment.getProperty('gateway.path')}/assets/vendor/glightbox/js/glightbox.min.js|}"></script>
+	<script th:src="@{|${@environment.getProperty('gateway.path')}/assets/vendor/swiper/swiper-bundle.min.js|}"></script>
+	<script th:src="@{|${@environment.getProperty('gateway.path')}/assets/vendor/aos/aos.js|}"></script>
+	<script th:src="@{|${@environment.getProperty('gateway.path')}/assets/vendor/php-email-form/validate.js|}"></script>
 
 	<!-- Template Main JS File -->
-	<script th:src="@{/assets/js/main.js}"></script>
+	<script th:src="@{|${@environment.getProperty('gateway.path')}/assets/js/main.js|}"></script>
 
 </body>
 
