--- a/shipper/src/main/resources/templates/fragment/profile-box.html
+++ b/shipper/src/main/resources/templates/fragment/profile-box.html
@@ -14,11 +14,11 @@
                         <h3 class="mb-3">Your Information</h3>
                         <div class="row gy-4">
 
-                            <div class="col-md-12">
+                            <!--<div class="col-md-12">
                                 <label class="mb-2">User ID:</label>
                                 <input type="text" name="id" th:value="${user.id}" class="form-control"
                                     placeholder="User ID" disabled>
-                            </div>
+                            </div>-->
 
                             <div class="col-md-12">
                                 <label class="mb-2">Username:</label>
