--- a/shipper/src/main/resources/templates/fragment/profile-box.html
+++ b/shipper/src/main/resources/templates/fragment/profile-box.html
@@ -21,8 +21,8 @@
                             </div>-->
 
                             <div class="col-md-12">
-                                <label class="mb-2">Username:</label>
-                                <input type="text" name="username" th:value="${user.username}" class="form-control"
+                                <label class="mb-2">Email:</label>
+                                <input type="text" name="email" th:value="${user.email}" class="form-control"
                                     placeholder="Username" disabled>
                             </div>
 
