--- a/shipper/src/main/resources/templates/delivered-order.html
+++ b/shipper/src/main/resources/templates/delivered-order.html
@@ -121,7 +121,7 @@
 
 		function render() {
 			$.ajax({
-				url: "http://localhost:8080/order/delivered",
+				url: "http://localhost:8080/shipper/order/fragment/delivered",
 				type: 'GET',
 				contentType: "html",
 				crossDomain: true,
