--- a/shipper/src/main/resources/templates/fragment/header.html
+++ b/shipper/src/main/resources/templates/fragment/header.html
@@ -18,10 +18,10 @@
             <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href="#hero" class="active">Home</a></li>
-                    <li><a href="#">In-Progress Orders</a></li>
-                    <li><a href="#">Delivered Orders</a></li>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="/shipper/home" class="active">Home</a></li>
+                    <li><a href="/shipper/order/in-progress">In-Progress Orders</a></li>
+                    <li><a href="/shipper/order/delivered">Delivered Orders</a></li>
+                    <li><a href="/shipper/profile">Profile</a></li>
                     <li><a class="get-a-quote" style="background-color: #ff2c2c;" href="get-a-quote.html">Logout</a>
                     </li>
                 </ul>
