Add search feature

--- a/shipper/src/main/resources/templates/fragment/delivered-orders-box.html
+++ b/shipper/src/main/resources/templates/fragment/delivered-orders-box.html
@@ -16,6 +16,7 @@
             </tr>
         </thead>
         <tbody>
+            <!-- Check if orders list is not empty -->
             <tr th:each="order: ${orders}">
                 <td class="order-id" th:utext="${order.id}"></td>
                 <td th:utext="${order.createdDate}"></td>
@@ -24,7 +25,6 @@
             </tr>
         </tbody>
     </table>
-
 </body>
 
 </html>
