--- a/shipper/src/main/resources/templates/fragment/in-progress-orders-box.html
+++ b/shipper/src/main/resources/templates/fragment/in-progress-orders-box.html
@@ -22,7 +22,7 @@
                 <td th:utext="${order.createdDate}"></td>
                 <td th:utext="${order.address}"></td>
                 <td><button class="btn btn-primary" onclick="detail(this)">Detail</button></td>
-                <td><button class="btn btn-success" onclick="complete(this)">Complete</button></td>
+                <td><button class="btn btn-success" onclick="finish(this)">Finish</button></td>
             </tr>
         </tbody>
     </table>
