--- a/shipper/src/main/resources/templates/home.html
+++ b/shipper/src/main/resources/templates/home.html
@@ -124,10 +124,15 @@
 		render(1); // Show all content at the first load
 
 		function render(pageNumber) {
-			// Make first page in pagination active
-			document.querySelectorAll(".page-link")[0].classList.remove("active");
-			if (pageNumber === 1) {
-				document.querySelectorAll(".page-link")[0].classList.add("active");
+			let pageLinks = document.querySelectorAll(".page-link");
+			if (pageLinks.length !== 0) {
+				// Make first page in pagination active
+				pageLinks.forEach(function (pageLink) {
+					pageLink.parentNode.classList.remove("active");
+				});
+				if (pageNumber === 1) {
+					document.querySelectorAll(".page-link")[0].classList.add("active");
+				}
 			}
 
 			$.ajax({
@@ -183,7 +188,7 @@
 				},
 				success: function (response) {
 					//console.log('Request succeeded:', response);
-					render();
+					render(1);
 				},
 				error: function (xhr, status, error) {
 					console.log('Request failed:', error);
@@ -195,7 +200,7 @@
 			// Remove the "active" class from all page links
 			let pageLinks = document.querySelectorAll(".page-link");
 			pageLinks.forEach(function (pageLink) {
-				pageLink.parentNode.classList.remove("active");
+				pageLink.classList.remove("active");
 			});
 
 			// Add the "active" class to the clicked page link's parent "li" element
