--- a/shipper/src/main/resources/templates/in-progress-order.html
+++ b/shipper/src/main/resources/templates/in-progress-order.html
@@ -71,7 +71,8 @@
 					<input type="text" id="orderIdSearch" class="form-control" placeholder="Order ID..."
 						onkeydown="if (event.keyCode === 13) renderFromSearch()">
 					<div class="input-group-append">
-						<button class="btn btn-outline-primary" type="button" onclick="renderFromSearch()">Search</button>
+						<button class="btn btn-outline-primary" type="button"
+							onclick="renderFromSearch()">Search</button>
 					</div>
 				</div>
 
@@ -124,10 +125,16 @@
 
 
 		function render(pageNumber) {
-			// Make first page in pagination active
-			document.querySelectorAll(".page-link")[0].classList.remove("active");
-			if (pageNumber === 1) {
-				document.querySelectorAll(".page-link")[0].classList.add("active");
+			let pageLinks = document.querySelectorAll(".page-link");
+			if (pageLinks.length !== 0) {
+				// Make first page in pagination active
+				pageLinks.forEach(function (pageLink) {
+					pageLink.parentNode.classList.remove("active");
+				});
+				document.querySelectorAll(".page-link")[0].classList.remove("active");
+				if (pageNumber === 1) {
+					document.querySelectorAll(".page-link")[0].classList.add("active");
+				}
 			}
 
 			$.ajax({
@@ -158,7 +165,7 @@
 
 			if (orderId === '') {
 				isSearch = 0;
-				orderId =-1;
+				orderId = -1;
 			}
 
 			$.ajax({
@@ -172,18 +179,17 @@
 			});
 		}
 
-		function complete(that) {
+		function finish(that) {
 			let orderId = $(that).closest("tr").find(".order-id").text();
 			$.ajax({
-				url: 'http://localhost:8080/api/order/shipper',
+				url: 'http://localhost:8080/api/order/shipper/finish/',
 				method: 'PUT',
 				data: {
-					shipperId: shipperId,
 					orderId: orderId
 				},
 				success: function (response) {
 					//console.log('Request succeeded:', response);
-					render();
+					render(1);
 				},
 				error: function (xhr, status, error) {
 					console.log('Request failed:', error);
@@ -195,7 +201,7 @@
 			// Remove the "active" class from all page links
 			let pageLinks = document.querySelectorAll(".page-link");
 			pageLinks.forEach(function (pageLink) {
-				pageLink.parentNode.classList.remove("active");
+				pageLink.classList.remove("active");
 			});
 
 			// Add the "active" class to the clicked page link's parent "li" element
