--- a/shipper/src/main/resources/templates/fragment/order-detail-box.html
+++ b/shipper/src/main/resources/templates/fragment/order-detail-box.html
@@ -53,7 +53,7 @@
             </p>
         </div>
         <div>
-            <a class="btn btn-outline-primary">Back</a>
+            <a class="btn btn-outline-primary" href="/shipper/home">Home</a>
         </div>
     </div>
 </body>
