--- a/shipper/src/main/resources/templates/in-progress-order.html
+++ b/shipper/src/main/resources/templates/in-progress-order.html
@@ -48,7 +48,7 @@
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-6 text-center">
-							<h2>Sample Inner Page</h2>
+							<h2>In-Progress Orders</h2>
 						</div>
 					</div>
 				</div>
@@ -56,8 +56,8 @@
 			<nav>
 				<div class="container">
 					<ol>
-						<li><a href="index.html">Home</a></li>
-						<li>Sample Inner Page</li>
+						<li><a href="/shipper/home">Home</a></li>
+						<li>In-Progress Orders</li>
 					</ol>
 				</div>
 			</nav>
