--- a/shipper/src/main/resources/templates/fragment/header.html
+++ b/shipper/src/main/resources/templates/fragment/header.html
@@ -10,7 +10,7 @@
     <header id="header" class="header d-flex align-items-center fixed-top" th:fragment="header">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-            <a href="index.html" class="logo d-flex align-items-center">
+            <a href="/shipper/home" class="logo d-flex align-items-center">
                 <h1>eShipper</h1>
             </a>
 
