--- a/shipper/src/main/resources/templates/fragment/profile-box.html
+++ b/shipper/src/main/resources/templates/fragment/profile-box.html
@@ -47,9 +47,8 @@
                             <div class="col-md-12 text-center">
                                 <div>
                                     <button type="submit" class="me-5">Save</button>
-                                    <a class="get-a-quote text-secondary" href="home.html">Cancel</a>
+                                    <a class="get-a-quote text-secondary" href="/shipper/home">Cancel</a>
                                 </div>
-
                             </div>
 
                         </div>
