--- a/shipper/src/main/resources/templates/order-detail.html
+++ b/shipper/src/main/resources/templates/order-detail.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>[Template] Sample Inner Page</title>
+	<title>Order Detail</title>
 	<meta content="" name="description">
 	<meta content="" name="keywords">
 
@@ -48,7 +48,7 @@
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-6 text-center">
-							<h2>Sample Inner Page</h2>
+							<h2>Order Detail</h2>
 						</div>
 					</div>
 				</div>
@@ -56,8 +56,8 @@
 			<nav>
 				<div class="container">
 					<ol>
-						<li><a href="index.html">Home</a></li>
-						<li>Sample Inner Page</li>
+						<li><a href="/shipper/home">Home</a></li>
+						<li>Order Detail</li>
 					</ol>
 				</div>
 			</nav>
