--- a/shipper/src/main/resources/templates/profile.html
+++ b/shipper/src/main/resources/templates/profile.html
@@ -56,7 +56,7 @@
 			<nav>
 				<div class="container">
 					<ol>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/shipper/home">Home</a></li>
 						<li>Profile</li>
 					</ol>
 				</div>
